# wakaama

./: bluePair.sh  bluetooth_auto.sh  lwm2m_good_summary  wakamaTrunkDTLS.guide
core/: data.c  json.c  liblwm2m.c  liblwm2m.h  management.c  objects.c  observe.c  packet.c
examples/bootstrap_server/: bootstrap_server.ini
examples/client/: CMakeLists.txt  CMakeLists_arm.txt  cJSON.h  compile_guide.txt  data_convert.c  jsonParse.c  lwm2mclient.c  object_common.c  object_common.h  object_connectivity_moni.c  object_device.c  object_firmware.c  object_humidity.c  object_location.c  object_pm25.c  object_server.c  object_temperature.c  object_vehicle.c  sensorData.h  shareMemData.h  sqliteUtils.c  sqliteUtils.h  storeSensorData.c  system_api.c  test_object.c  unixIPC.c  unixIPC.h  utils.c
examples/client/src_sql/: sqlite_readme.txt
examples/shared/: connection.c  dtlsconnection.c
tests/: CMakeLists.txt  readme.md  tlv_json_lwm2m_data_test.c  unittests.c
